@@ -38,10 +38,10 @@ int test_dec_corner_case(int verbose)
 	bi2.bytes = bytes_buf2;
 	bi2.bytes_len = BILEN;
 
-	err = ehbi_from_decimal_string(&bi1, str_1, strlen(str_1));
-	err += ehbi_from_decimal_string(&bi2, str_2, strlen(str_2));
+	err = ehbi_set_decimal_string(&bi1, str_1, strlen(str_1));
+	err += ehbi_set_decimal_string(&bi2, str_2, strlen(str_2));
 	if (err) {
-		LOG_ERROR1("error %d ehbi_from_decimal_string\n", err);
+		LOG_ERROR1("error %d ehbi_set_decimal_string\n", err);
 		LOG_ERROR("Aborting test\n");
 		return (1 + failures);
 	}
