@@ -31,11 +31,10 @@ int test_from_hex_to_hex_round_trip(int verbose)
 	failures = 0;
 
 	err =
-	    ehbi_from_hex_string(&a_bigint, expected_str, strlen(expected_str));
+	    ehbi_set_hex_string(&a_bigint, expected_str, strlen(expected_str));
 
 	if (err) {
-		LOG_ERROR1("error %d returned from ehbi_from_hex_string\n",
-			   err);
+		LOG_ERROR1("error %d returned from ehbi_set_hex_string\n", err);
 		LOG_ERROR("Aborting test\n");
 		return (1 + failures);
 	}
